# deku_string

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  rustfmt.toml
.cargo/: mutants.toml
.config/: mutants.toml  nextest.toml
.github/: ci-tools.toml  renovate.json  rust_pedantic.py
.github/actions/cache/: action.yaml
.github/actions/install-tools/: action.yaml  entrypoint.py
.github/scripts/: mut_diff.sh
.github/workflows/: ci.yaml  release.yaml  style.yaml  wait-all-checks.yaml
src/: deku_impl.rs  deku_impl_vec.rs  lib.rs  serde_impl.rs  std_impl.rs
src/common/: deku_impl.rs  mod.rs  serde_impl.rs  std_impl.rs
src/seven_bit/: deku_impl.rs  lib_impl.rs  mod.rs
src/str/: mod.rs  serde_impl.rs
src/string/: defmt_impl.rs  deku_impl.rs  lib_impl.rs  mod.rs  std_impl.rs
src/vec/: deku_impl.rs  lib_impl.rs  mod.rs  serde_impl.rs  std_impl.rs
test-utils/: Cargo.toml
test-utils/src/: read.rs  write.rs
tests/: 64k_data  deku_derive.rs  layouts.rs  test_gen_macro.rs  utf16.rs  utf16_rejected.rs  utf8.rs  utf8_rejected.rs  write_rejected.rs
tests/data/: accepted.rs  data_255  data_256  utf16_u8_big_data_255  utf16_u8_little_data_255  utf32_u8_big_data_255  utf32_u8_little_data_255  utf8_u8_little_data_255
tests/io-rejected/: Cargo.toml
tests/io-rejected/src/: lib.rs
tests/seven_bit/: README.adoc  accepted.rs  deku_derive.rs  read_rejected.rs  rw_accepted.rs  write_rejected.rs
tests/seven_bit/data/: accepted.rs  mod.rs  read_rejected.rs  write_rejected.rs
tests/seven_bit/macros/: accepted.rs  misc.rs  mod.rs  read_rejected.rs  write_rejected.rs
tests/string/: README.adoc  accepted.rs  deku_derive.rs  format.rs  read_rejected.rs  rw_accepted.rs  write_rejected.rs
tests/string/data/: accepted.rs  invalid_io.rs  layouts.rs  mod.rs  read_rejected.rs  rejected.rs  write_rejected.rs
tests/string/macros/: accepted.rs  misc.rs  mod.rs  read_rejected.rs  write_rejected.rs
tests/test-utils/: Cargo.toml
tests/test-utils/src/: io.rs  lib.rs  write.rs
tests/vec/: README.adoc  accepted.rs  deku_derive.rs  read_rejected.rs  rw_accepted.rs  write_rejected.rs
tests/vec/data/: accepted.rs  layouts.rs  mod.rs  read_rejected.rs  write_rejected.rs
tests/vec/macros/: accepted.rs  misc.rs  mod.rs  read_rejected.rs  write_rejected.rs
