[package]
name = "deku_string"
version = "0.2.1-0"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "String and Vector encoding/decoding helpers for Deku, supporting in fixed, Pascal, and C-style formats with length guarantee."
repository = "https://github.com/eirtools/deku_string"
keywords = ["deku", "binary", "serialization", "string", "no_std"]
categories = ["encoding", "no-std", "parsing"]
exclude = ["/.github", "/examples", "/*.md"]

[dependencies]
deku = { version = "0.19.0" }
serde = { version = "1.0", optional = true }

[dev-dependencies]
rstest = { version = "0.26.0" }
pastey = { version = "0.1.0" }
serde_json = { version = "1.0" }
io-rejected = { path = "tests/io-rejected" }

[[test]]
name = "str_rw_accepted"
path = "tests/string/rw_accepted.rs"

[[test]]
name = "str_read_rejected"
path = "tests/string/read_rejected.rs"

[[test]]
name = "str_write_rejected"
path = "tests/string/write_rejected.rs"

[[test]]
name = "str_deku_derive"
path = "tests/string/deku_derive.rs"

[[test]]
name = "seven_bit_rw_accepted"
path = "tests/seven_bit/rw_accepted.rs"

[[test]]
name = "seven_bit_read_rejected"
path = "tests/seven_bit/read_rejected.rs"

[[test]]
name = "seven_bit_write_rejected"
path = "tests/seven_bit/write_rejected.rs"

[[test]]
name = "seven_bit_deku_derive"
path = "tests/seven_bit/deku_derive.rs"

[badges]
maintenance = { status = "actively-developed" }
