[package]
name = "deku_string"
version = "0.4.1-1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Encoding/decoding helpers for Deku, String, Vec in fixed, Pascal, .NET and C-style formats with length guarantee."
repository = "https://github.com/eirtools/deku_string"
keywords = ["deku", "binary", "serialization", "string", "no_std"]
categories = ["encoding", "no-std", "parsing"]
exclude = ["/.github", "/examples", "/*.md"]
rust-version = "1.81"

[dependencies]
deku = { version = "0.20.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0.228", optional = true }
defmt = { version = "1.0.1", optional = true }

[dev-dependencies]
rstest = { version = "0.26.1" }
pastey = { version = "0.2.1" }
serde_json = { version = "1.0.147" }
test-utils = { path = "test-utils" }
defmt = { version = "1.0.1", features = ["unstable-test"] }

[features]
descriptive-errors = ["deku/descriptive-errors"]

[[test]]
name = "str_rw_accepted"
path = "tests/string/accepted.rs"

[[test]]
name = "str_read_rejected"
path = "tests/string/read_rejected.rs"

[[test]]
name = "str_write_rejected"
path = "tests/string/write_rejected.rs"

[[test]]
name = "str_deku_derive"
path = "tests/string/deku_derive.rs"

[[test]]
name = "seven_bit_rw_accepted"
path = "tests/seven_bit/accepted.rs"

[[test]]
name = "seven_bit_read_rejected"
path = "tests/seven_bit/read_rejected.rs"

[[test]]
name = "seven_bit_write_rejected"
path = "tests/seven_bit/write_rejected.rs"

[[test]]
name = "seven_bit_deku_derive"
path = "tests/seven_bit/deku_derive.rs"

[[test]]
name = "vec_rw_accepted"
path = "tests/vec/accepted.rs"

[[test]]
name = "vec_read_rejected"
path = "tests/vec/read_rejected.rs"

[[test]]
name = "vec_write_rejected"
path = "tests/vec/write_rejected.rs"

[[test]]
name = "vec_deku_derive"
path = "tests/vec/deku_derive.rs"

[badges]
maintenance = { status = "actively-developed" }
